html css imagees

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <section class="card1-bgimg">
         <div class="container">
             <p class="fs-16 fw-600 ffw text-center orange pt-227">Features</p>
-            <h2 class="fs-40 fw-700 ffw text-center bs-black mb-121">Why Choose <span
-                    class="fs-40 fw-700 ffw orange2"> Maître D?</span></h2>
+            <h2 class="fs-40 fw-700 ffw text-center bs-black mb-121">Why Choose <span class="fs-40 fw-700 ffw orange2">
+                    Maître D?</span></h2>
             <div class="row mb-5 ">
                 <div class="col-xl-4 col-lg-6 col-sm-12">
                     <div class="card1 d-flex flex-column align-items-center   ">
@@ -137,8 +137,8 @@
         <div class="container">
             <p class="fs-16 fw-600 ffw text-center orange">Modules</p>
             <h2 class="fs-40 fw-700 ffw bs-black pb-3 text-center ">Why Choose <span
-                    class="fs-40 fw-700 ffw orange" >Maître D? </span>
-                </h2>
+                    class="fs-40 fw-700 ffw orange">Maître D? </span>
+            </h2>
 
             <div class="slider slider1">
                 <div class="slider-card pt-51 p-4  d-flex gap-5">
@@ -440,9 +440,11 @@
                     </div>
                     <div>
                         <button class="fs-20 fw-700 ffw white btn2 mt-5 mb-5">submit</button>
+                    </div>
                 </div>
+
                 <div class="col-lg-6 col-12">
-                    <img src="./assets/images/Group 39631.png" alt="form-section-img " width="100">
+                    <img src="./assets/images/Group 39631.png" alt="xy" width="100">
                 </div>
             </div>
         </div>
