--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 </div>
 
                 <div class="col-lg-6 col-12">
-                    <img src="./assets/images/Group 39631.png" alt="xy" width="100">
+                    <img src="./assets/images/Group 39631.png" alt="xy" class="w-100">
                 </div>
             </div>
         </div>
